<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home_24"
        android:title="@string/bottom_nav_home_title" />

    <item
        android:id="@+id/bottom_nav_cart"
        android:icon="@drawable/cart"
        android:title="@string/bottom_nav_cart_title"
        />
    <item
        android:id="@+id/bottom_nav_wishlist"
        android:icon="@drawable/favorite"
        android:title="@string/bottom_nav_wishlist_title" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/person"
        android:title="@string/bottom_nav_profile_title" />

    <item
        android:id="@+id/bottom_nav_menu"
        android:icon="@drawable/menu_24"
        android:title="@string/bottom_nav_menu_text" />
</menu>