<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="60dp"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/splash_app_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/signup_email_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="13sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/signin_input_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/user_email_hint_ex_text"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/signup_password_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signin_input_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/signup_password_hint_text"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/signin_check_remember_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:text="@string/remember_me_text"
                android:textColor="?attr/colorOnSurface"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/signin_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_forgot_password"
                android:textColor="@color/orange"
                android:layout_marginTop="9dp"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/signinBtnSignin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup_sign_in_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text_create_account"
                android:textSize="13sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/signintextSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_sign_up_text"
                android:textColor="@color/orange"
                android:textSize="13sp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>